[package]
name = "blog_os"
version = "0.1.0"
authors = ["dunmengjun"]
edition = "2018"

# [profile.dev]
# panic = "abort" # 禁用panic时栈展开

[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.7"
spin = "0.7.0"
x86_64 = "0.12.3"
uart_16550 = "0.2.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", 
    "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
